[package]
name = "melnor-esp"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "melnor-esp"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
esp-idf-svc = "0.52"
esp32-nimble = "0.12"
log = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
# Archived but stable and pure-Rust, so it cross-compiles cleanly to the ESP
# targets. Swap for serde_yml / serde_norway if you want an active fork.
serde_yaml = "0.9"

[build-dependencies]
embuild = "0.33"
